# cortexshield-ai

./: .gitignore  LICENSE  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt
cortexshield/detectors/: prompt_injection.py
src/cortexshield/: __init__.py
src/cortexshield/core/: cortexshield.py  model_wrapper.py
src/cortexshield/detectors/: enterprise_detector.py  prompt_injection.py  ultra_detector.py
