[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortexshield-ai"
version = "0.1.0"
description = "ðŸ§ ðŸ›¡ï¸ AI Immune System - Protects models from prompt injection & attacks"
authors = [{name = "Ninad Gowda", email = "ninadgowdru@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "transformers>=4.45.0",
    "torch>=2.5.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5.0",
]

[project.scripts]
cortexshield = "cortexshield.api:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/cortexshield"]
